[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.1",
    "openai>=1.79.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
